tests/ast_interpreter/err_string_repetition_negative.expected
<string>:2:19: error: string repetition count cannot be negative
    print("hello" * -3);
                  ^
