tests/ast_interpreter/err_string_repetition_negative.nx
fun main() {
    print("hello" * -3);
}